SERVER-38833: Throw a WCE when index completion ghost writes set a bad timestamp.